FIX: Make some CSS changes to fix readability

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -9,14 +9,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap');
 
 :root {
-  --ifm-color-primary: #74e8a3;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
+  --ifm-color-primary: #07903e;
+  --ifm-color-primary-dark: rgb(13, 126, 101);
+  --ifm-color-primary-darker: rgb(13, 100, 81);
   --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
-  --ifm-code-font-size: 95%;
+  --ifm-color-primary-light: rgb(12, 173, 138);
+  --ifm-color-primary-lighter: rgb(7, 77, 61);
+  --ifm-color-primary-lightest: rgb(10, 117, 96);
+  --ifm-code-font-size: 120%;
   font-family: 'Poppins', sans-serif;
 }
 
